# Visual-Based-Odometry-Estimation1-cpp

./: .gitignore  CMakeLists.txt  HDMapping.cpp  HDMapping1.h  LICENSE  README.md  back.csv  constructWorldMap_types.h  constructWorldMap_types1.h  front.csv  left.csv  log.txt  loopDatabase_x86_64.h  main.cpp  main.h  opencvAPI.cpp  opencvAPI.h  orbSlam.cpp  orbSlam.h  right.csv  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
CXSparse/: CMakeLists.txt
c_cpp_utils/: CommandParser.h  path.h  timeString.h
c_cpp_utils/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h
c_cpp_utils/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
c_cpp_utils/spdlog/details/: backtracer-inl.h  backtracer.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  os-inl.h  os.h  periodic_worker-inl.h  registry-inl.h  registry.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
c_cpp_utils/spdlog/fmt/: fmt.h
c_cpp_utils/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
constructSrc/: BuildHDMap.cpp  BuildHDMap.hpp  CMakeLists.txt  common.hpp  constructWorldMap.c  constructWorldMap.h  constructWorldMap_emxAPI.c  constructWorldMap_emxAPI.h  constructWorldMap_emxutil.c  constructWorldMap_emxutil.h  constructWorldMap_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
constructSrc/ocv/: CMakeLists.txt  detectORBCore.cpp
mapSrc/: CMakeLists.txt  HDMapping.cpp  HDMapping.h  HDMapping1.h  constructWorldMap_types.h  constructWorldMap_types1.h  loopDatabase_x86_64.cpp  loopDatabase_x86_64.h  opencvAPI.cpp  opencvAPI.h  rtGetInf.cpp  rtGetNaN.cpp  rt_defines.h
ocv/: CMakeLists.txt  detectORBCore.cpp  extractORBCore.cpp
ocv/include/: detectORBCore_api.hpp  extractORBCore_api.hpp
src/: BowVector.h  CMakeLists.txt  DescManip.h  FeatureVector.h  Vocabulary.cpp  Vocabulary.h
